<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.JoinFamilyActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/activity_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="@color/white_f2f2f2" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_139">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_16"
                android:layout_marginTop="@dimen/qb_px_38"
                android:text="@string/joinfamily_yqjr"
                android:textColor="@color/black_333333"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_join_family_qyq"
                android:layout_width="@dimen/qb_px_74"
                android:layout_height="@dimen/qb_px_36"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/qb_px_16"
                android:layout_marginTop="@dimen/qb_px_31"
                android:background="@drawable/shape_family"
                android:gravity="center"
                android:text="@string/joinfamily_qyq"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_62">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_16"
                android:text="@string/joinfamily_jrys"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_join_family_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/qb_px_10"
                android:layout_marginLeft="@dimen/qb_px_16"
                android:background="@color/white"
                android:hint="@string/joinfamily_srys"
                android:lines="1"
                android:maxWidth="@dimen/qb_px_180"
                android:textColorHint="@color/white_BBBBBB"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_join_family_sure"
                android:layout_width="@dimen/qb_px_62"
                android:layout_height="@dimen/qb_px_30"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_22"
                android:background="@drawable/shape_family"
                android:gravity="center"
                android:text="@string/changeHome_sure"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="@color/white_f2f2f2" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_85">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_16"
                android:layout_marginTop="@dimen/qb_px_23"
                android:text="@string/joinfamily_jrxs"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_join_family_chenggong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/qb_px_10"
                android:layout_marginLeft="@dimen/qb_px_16"
                android:text="@string/joinfamily_cg"
                android:textColor="@color/white_BBBBBB"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="@color/white_f2f2f2" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="@dimen/qb_px_247"
                android:layout_height="@dimen/qb_px_151"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/qb_px_46" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/video_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/qb_px_64"
                android:text="@string/joinfamily_tg"
                android:textColor="@color/white_BBBBBB"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>