<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/activity_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="@color/white_f2f2f2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_56"
            android:layout_marginTop="@dimen/qb_px_1"
            android:background="@color/white">


            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/changeHome_genghuan_ys"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/change_home_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_toRightOf="@+id/tv"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/changeHome_shuru_phone"
                android:inputType="number"
                android:lines="1"
                android:textColorHint="@color/white_AAAAAA"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/change_home_sure"
                android:layout_width="@dimen/qb_px_67"
                android:layout_height="@dimen/qb_px_29"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_16"
                android:background="@drawable/setting_ybd_shape_true"
                android:gravity="center"
                android:text="@string/changeHome_sure"
                android:textColor="@color/white"
                android:textSize="13sp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="@color/white_f2f2f2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_56"
            android:layout_marginTop="@dimen/qb_px_1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/changeHome_tuichuyansheng"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/change_home_login_out"
                android:layout_width="@dimen/qb_px_67"
                android:layout_height="@dimen/qb_px_29"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_16"
                android:background="@drawable/setting_ybd_shape_true"
                android:gravity="center"
                android:text="@string/changeHome_login_out"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:layout_marginLeft="@dimen/qb_px_16"
            android:background="@color/white_f2f2f2" />

    </LinearLayout>
</RelativeLayout>