<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/activity_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="@color/white_f2f2f2" />


        <RelativeLayout
            android:id="@+id/rl_edit_face"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_56"
            android:layout_marginTop="@dimen/qb_px_1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/etit_face"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/img_face_show_edit"
                android:layout_width="@dimen/qb_px_38"
                android:layout_height="@dimen/qb_px_38"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_27"
                android:layout_toLeftOf="@+id/img_face"
                android:background="@color/yello_FF951E" />


            <ImageView
                android:id="@+id/img_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_16"
                android:src="@drawable/more" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:layout_marginLeft="@dimen/qb_px_16"
            android:background="@color/white_f2f2f2" />

        <RelativeLayout
            android:id="@+id/rl_edit_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_56"
            android:layout_marginTop="@dimen/qb_px_1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/etit_name"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_16"
                android:layout_toLeftOf="@+id/img_you"
                android:text="sasas"
                android:textColor="@color/white_AAAAAA"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/img_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_16"
                android:src="@drawable/more" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:layout_marginLeft="@dimen/qb_px_16"
            android:background="@color/white_f2f2f2" />

        <RelativeLayout
            android:id="@+id/rl_edit_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_56"
            android:layout_marginTop="@dimen/qb_px_1">


            <TextView
                android:id="@+id/tv_edit_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/etit_gender"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/qb_px_10"
                android:layout_toRightOf="@+id/tv_edit_gender"
                android:gravity="center"
                android:text="@string/etit_tishi"
                android:textColor="@color/white_AAAAAA"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_show_gender_deit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_40"
                android:text="@string/perfect_man"
                android:textColor="@color/white_AAAAAA"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:layout_marginLeft="@dimen/qb_px_16"
            android:background="@color/white_f2f2f2" />

        <RelativeLayout
            android:id="@+id/rl_edit_data"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_56"
            android:layout_marginTop="@dimen/qb_px_1">


            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/perfect_show_birthdy"
                android:textColor="@color/black_333333"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_data_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_34"
                android:gravity="center_vertical"
                android:text="@string/perfect_data"
                android:textColor="@color/white_BBBBBB"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/qb_px_16"
                android:src="@drawable/more" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:layout_marginLeft="@dimen/qb_px_16"
            android:background="@color/white_f2f2f2" />

    </LinearLayout>

</RelativeLayout>